--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,6 +25,11 @@ html5up.net | @ajlkn
 Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+.PackDownloadButton {
+    text-align: right;
+}
+
+
 html,
 body,
 div,
@@ -109,8 +114,6 @@ video {
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
-    font: inherit;
     vertical-align: baseline;
 }
 
